# iterm-pane-spliter

./: .flake8  .gitignore  LICENSE  README.md  REDME.md  panes_creator.py  pyproject.toml  requirements.txt  terminal_helper.py
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
panes_parser/: parser.py  parser_test.py  types.py  validator.py
src/iterm_pane_spliter/: __main__.py  panes_creator.py  terminal_helper.py
src/iterm_pane_spliter/panes_parser/: panes_tree.py  parser.py  types.py  validator.py
test/: test_parser.py
